--- a/LinearLayoutInfo/src/main/res/layout/layout_linear_info.xml
+++ b/LinearLayoutInfo/src/main/res/layout/layout_linear_info.xml
@@ -15,7 +15,7 @@
         android:textStyle="bold"
         tools:text="@tools:sample/first_names" />
 
-    <com.example.cinemates.util.ReadMoreTextView
+    <com.borjabravo.readmoretextview.ReadMoreTextView
         android:id="@+id/value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
