--- a/app/src/main/res/layout/fragment_movie_info.xml
+++ b/app/src/main/res/layout/fragment_movie_info.xml
@@ -26,7 +26,7 @@
                 tools:context=".view.ui.details.movie.MovieInfoFragment">
 
 
-                <com.example.cinemates.util.ReadMoreTextView
+                <com.borjabravo.readmoretextview.ReadMoreTextView
                     android:id="@+id/readMoreTextV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -35,6 +35,7 @@
                     android:layout_marginEnd="10dp"
                     android:textColor="@color/alabaster"
                     android:textSize="14sp"
+                    app:colorClickableText="@color/vermilion_100"
                     app:loadText="@{movie.overview}"
                     app:trimLength="200"
                     app:trimMode="trimModeLength"
