--- a/app/src/main/res/layout/layout_movie_info.xml
+++ b/app/src/main/res/layout/layout_movie_info.xml
@@ -20,6 +20,7 @@
             android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
             app:title="Original title"
+            app:defaultValue="Not specified"
             app:value="@{movie.original_title}" />
 
         <com.indisparte.linearlayoutinfo.LinearInfoView
@@ -28,6 +29,7 @@
             android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
             app:title="Status"
+            app:defaultValue="Not specified"
             app:value="@{movie.status}" />
 
         <com.indisparte.linearlayoutinfo.LinearInfoView
@@ -36,6 +38,8 @@
             android:layout_height="wrap_content"
             app:title="Runtime"
             android:layout_marginBottom="10dp"
+            app:hideIfValueEmpty="true"
+            app:defaultValue="Not specified"
             app:value="@{movie.formattedRuntime}" />
 
         <com.indisparte.linearlayoutinfo.LinearInfoView
@@ -44,6 +48,7 @@
             android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
             app:title="Original language"
+            app:defaultValue="Not specified"
             app:value="@{movie.original_language}" />
 
         <com.indisparte.linearlayoutinfo.LinearInfoView
@@ -52,6 +57,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             app:title="Budget"
+            app:hideIfValueEmpty="true"
+            app:defaultValue="Not specified"
             app:value="@{movie.formattedBudget}" />
 
         <com.indisparte.linearlayoutinfo.LinearInfoView
@@ -59,6 +66,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:title="Revenue"
+            app:hideIfValueEmpty="true"
+            app:defaultValue="Not specified"
             app:value="@{movie.formattedRevenue}" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
