--- a/LinearLayoutInfo/src/main/res/values/attrs.xml
+++ b/LinearLayoutInfo/src/main/res/values/attrs.xml
@@ -3,6 +3,7 @@
     <declare-styleable name="LinearInfoView">
         <attr name="title" format="string" />
         <attr name="value" format="string" />
+        <attr name="defaultValue" format="string" />
         <attr name="hideIfValueEmpty" format="boolean" />
     </declare-styleable>
 </resources>
