Generalize FragmentList design

--- a/app/src/main/res/layout/fragment_listing_items.xml
+++ b/app/src/main/res/layout/fragment_listing_items.xml
@@ -18,12 +18,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+
             <TextView
                 android:id="@+id/item_counter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="18dp"
-                android:text='@{counter>1?counter+" movies":counter+" movie"}'
+                android:text='@{counter>1?counter+" items":counter+" item"}'
                 android:textColor="@color/alabaster"
                 android:textSize="14sp"
                 android:textStyle="bold"
