--- a/app/src/main/res/layout/fragment_actor_about.xml
+++ b/app/src/main/res/layout/fragment_actor_about.xml
@@ -36,8 +36,17 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/age"
                 android:layout_marginBottom="10dp"
-                app:title="Birthday"
+                app:title="Born on"
                 app:value="@{person.birthday}" />
+
+            <com.indisparte.linearlayoutinfo.LinearInfoView
+                android:id="@+id/deathDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/birthPlace"
+                app:hideIfValueEmpty="true"
+                app:title="Died on"
+                app:value="@{person.deathday}" />
 
             <com.indisparte.linearlayoutinfo.LinearInfoView
                 android:id="@+id/birthPlace"
@@ -45,18 +54,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/birthday"
                 android:layout_marginBottom="10dp"
-                app:title="Birthplace"
+                app:title="From"
                 app:value="@{person.place_of_birth}" />
-
-            <com.indisparte.linearlayoutinfo.LinearInfoView
-                android:id="@+id/deathDate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/birthPlace"
-                app:defaultValue="Alive"
-                app:hideIfValueEmpty="true"
-                app:title="Death-day"
-                app:value="@{person.deathDay}" />
 
             <com.indisparte.linearlayoutinfo.LinearInfoView
                 android:id="@+id/biography"
