--- a/app/src/main/res/layout/layout_collection_content.xml
+++ b/app/src/main/res/layout/layout_collection_content.xml
@@ -20,7 +20,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/collection_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:backgroundTint="@android:color/transparent"
             app:cardBackgroundColor="@android:color/transparent"
             app:cardCornerRadius="20dp">
