--- a/app/src/main/res/layout/layout_collection_cover.xml
+++ b/app/src/main/res/layout/layout_collection_cover.xml
@@ -15,6 +15,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:visibility="@{collection!=null? View.VISIBLE : View.GONE}"
         app:cardCornerRadius="20dp">
 
         <RelativeLayout
